{
    "name": "MVPControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "1ce6f047-71df-4bc4-98c8-56f5b6f93ce5",
            "actions": [
                {
                    "name": "ButtonA",
                    "type": "Button",
                    "id": "3c72e183-9a5e-4754-829d-17978042f221",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonB",
                    "type": "Button",
                    "id": "6286b355-7efa-4e96-a017-dd40911ddfbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonX",
                    "type": "Button",
                    "id": "c6c067e3-9368-4374-92e0-08043c274084",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ButtonY",
                    "type": "Button",
                    "id": "b8cd1141-0767-409c-8855-2208258a0dd5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stick",
                    "type": "Value",
                    "id": "213ec488-d15d-4b80-9f3a-afea8356d271",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ButtonStart",
                    "type": "Button",
                    "id": "ede74d23-af57-4ea3-ae4f-e27093752e5e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6bf3259-4cc3-4324-b4f8-77371b45fb28",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a58f206c-9f55-4d69-b282-60a27d92f4bd",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ButtonB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e9ce32e-afe2-400b-907f-cfdc9e16927f",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ButtonX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d584d9fc-f54d-4721-94a3-c16a8f8c37d9",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "ButtonY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "24f9647f-aff8-43f9-a284-a4eb01fce6e2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d4122a92-37ab-4454-84b1-2bdb39005d55",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Stick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "739e1f2e-979a-430b-85af-b1cad5d943eb",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Game",
                    "action": "Stick",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "01925022-7fd9-4f22-8969-9b9198ec29b8",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Game",
            "bindingGroup": "Game",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}